// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExportPrivateInfo/> should render <ExportPrivateInfo/> correctly and when there is a mnemonic 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExportPrivateInfo
    mnemonic="over sentence spend best business museum ripple shop vault present travel fire"
    onExit={[Function]}
    privateKey="0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <ExportPrivateInfo.style__Text>
          Never share this information with anyone
</ExportPrivateInfo.style__Text>,
        <ExportPrivateInfo.style__Text>
          Always keep a physical backup in a safe location
</ExportPrivateInfo.style__Text>,
        <ExportPrivateInfo.style__TextPrimary>
          <div>
                    <ExportPrivateInfo.style__SecondaryHeader>
                              Mnemonic
                              <CopyToClipboard
                                        onCopy={undefined}
                                        options={undefined}
                                        text="over sentence spend best business museum ripple shop vault present travel fire"
                              >
                                        <ExportPrivateInfo.style__StyledIcon
                                                  icon="copy"
                                                  id="mnemonic"
                                                  onClick={[Function]}
                                                  size="small"
                                                  type="icon"
                                        />
                              </CopyToClipboard>
                    </ExportPrivateInfo.style__SecondaryHeader>
                    over sentence spend best business museum ripple shop vault present travel fire
          </div>
          <div>
                    <ExportPrivateInfo.style__SecondaryHeader>
                              Private key
                              <CopyToClipboard
                                        onCopy={undefined}
                                        options={undefined}
                                        text="0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a"
                              >
                                        <ExportPrivateInfo.style__StyledIcon
                                                  icon="copy"
                                                  id="privateKey"
                                                  onClick={[Function]}
                                                  size="small"
                                                  type="icon"
                                        />
                              </CopyToClipboard>
                    </ExportPrivateInfo.style__SecondaryHeader>
                    0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a
          </div>
</ExportPrivateInfo.style__TextPrimary>,
        <ExportPrivateInfo.style__ParentDiv>
          <ExportPrivateInfo.style__StyledButton
                    id="exit"
                    onClick={[Function]}
                    type="primary"
          >
                    Close
          </ExportPrivateInfo.style__StyledButton>
</ExportPrivateInfo.style__ParentDiv>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Never share this information with anyone",
        },
        "ref": null,
        "rendered": "Never share this information with anyone",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Always keep a physical backup in a safe location",
        },
        "ref": null,
        "rendered": "Always keep a physical backup in a safe location",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <div>
              <ExportPrivateInfo.style__SecondaryHeader>
                            Mnemonic
                            <CopyToClipboard
                                          onCopy={undefined}
                                          options={undefined}
                                          text="over sentence spend best business museum ripple shop vault present travel fire"
                            >
                                          <ExportPrivateInfo.style__StyledIcon
                                                        icon="copy"
                                                        id="mnemonic"
                                                        onClick={[Function]}
                                                        size="small"
                                                        type="icon"
                                          />
                            </CopyToClipboard>
              </ExportPrivateInfo.style__SecondaryHeader>
              over sentence spend best business museum ripple shop vault present travel fire
</div>,
            <div>
              <ExportPrivateInfo.style__SecondaryHeader>
                            Private key
                            <CopyToClipboard
                                          onCopy={undefined}
                                          options={undefined}
                                          text="0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a"
                            >
                                          <ExportPrivateInfo.style__StyledIcon
                                                        icon="copy"
                                                        id="privateKey"
                                                        onClick={[Function]}
                                                        size="small"
                                                        type="icon"
                                          />
                            </CopyToClipboard>
              </ExportPrivateInfo.style__SecondaryHeader>
              0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a
</div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <ExportPrivateInfo.style__SecondaryHeader>
                  Mnemonic
                  <CopyToClipboard
                                    onCopy={undefined}
                                    options={undefined}
                                    text="over sentence spend best business museum ripple shop vault present travel fire"
                  >
                                    <ExportPrivateInfo.style__StyledIcon
                                                      icon="copy"
                                                      id="mnemonic"
                                                      onClick={[Function]}
                                                      size="small"
                                                      type="icon"
                                    />
                  </CopyToClipboard>
</ExportPrivateInfo.style__SecondaryHeader>,
                "over sentence spend best business museum ripple shop vault present travel fire",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    "Mnemonic",
                    <CopyToClipboard
                      onCopy={undefined}
                      options={undefined}
                      text="over sentence spend best business museum ripple shop vault present travel fire"
>
                      <ExportPrivateInfo.style__StyledIcon
                                            icon="copy"
                                            id="mnemonic"
                                            onClick={[Function]}
                                            size="small"
                                            type="icon"
                      />
</CopyToClipboard>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Mnemonic",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <ExportPrivateInfo.style__StyledIcon
                        icon="copy"
                        id="mnemonic"
                        onClick={[Function]}
                        size="small"
                        type="icon"
/>,
                      "onCopy": undefined,
                      "options": undefined,
                      "text": "over sentence spend best business museum ripple shop vault present travel fire",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "icon": "copy",
                        "id": "mnemonic",
                        "onClick": [Function],
                        "size": "small",
                        "type": "icon",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              "over sentence spend best business museum ripple shop vault present travel fire",
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <ExportPrivateInfo.style__SecondaryHeader>
                  Private key
                  <CopyToClipboard
                                    onCopy={undefined}
                                    options={undefined}
                                    text="0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a"
                  >
                                    <ExportPrivateInfo.style__StyledIcon
                                                      icon="copy"
                                                      id="privateKey"
                                                      onClick={[Function]}
                                                      size="small"
                                                      type="icon"
                                    />
                  </CopyToClipboard>
</ExportPrivateInfo.style__SecondaryHeader>,
                "0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    "Private key",
                    <CopyToClipboard
                      onCopy={undefined}
                      options={undefined}
                      text="0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a"
>
                      <ExportPrivateInfo.style__StyledIcon
                                            icon="copy"
                                            id="privateKey"
                                            onClick={[Function]}
                                            size="small"
                                            type="icon"
                      />
</CopyToClipboard>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Private key",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <ExportPrivateInfo.style__StyledIcon
                        icon="copy"
                        id="privateKey"
                        onClick={[Function]}
                        size="small"
                        type="icon"
/>,
                      "onCopy": undefined,
                      "options": undefined,
                      "text": "0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "icon": "copy",
                        "id": "privateKey",
                        "onClick": [Function],
                        "size": "small",
                        "type": "icon",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              "0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a",
            ],
            "type": "div",
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <ExportPrivateInfo.style__StyledButton
            id="exit"
            onClick={[Function]}
            type="primary"
>
            Close
</ExportPrivateInfo.style__StyledButton>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Close",
            "id": "exit",
            "onClick": [Function],
            "type": "primary",
          },
          "ref": null,
          "rendered": "Close",
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <ExportPrivateInfo.style__Text>
            Never share this information with anyone
</ExportPrivateInfo.style__Text>,
          <ExportPrivateInfo.style__Text>
            Always keep a physical backup in a safe location
</ExportPrivateInfo.style__Text>,
          <ExportPrivateInfo.style__TextPrimary>
            <div>
                        <ExportPrivateInfo.style__SecondaryHeader>
                                    Mnemonic
                                    <CopyToClipboard
                                                onCopy={undefined}
                                                options={undefined}
                                                text="over sentence spend best business museum ripple shop vault present travel fire"
                                    >
                                                <ExportPrivateInfo.style__StyledIcon
                                                            icon="copy"
                                                            id="mnemonic"
                                                            onClick={[Function]}
                                                            size="small"
                                                            type="icon"
                                                />
                                    </CopyToClipboard>
                        </ExportPrivateInfo.style__SecondaryHeader>
                        over sentence spend best business museum ripple shop vault present travel fire
            </div>
            <div>
                        <ExportPrivateInfo.style__SecondaryHeader>
                                    Private key
                                    <CopyToClipboard
                                                onCopy={undefined}
                                                options={undefined}
                                                text="0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a"
                                    >
                                                <ExportPrivateInfo.style__StyledIcon
                                                            icon="copy"
                                                            id="privateKey"
                                                            onClick={[Function]}
                                                            size="small"
                                                            type="icon"
                                                />
                                    </CopyToClipboard>
                        </ExportPrivateInfo.style__SecondaryHeader>
                        0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a
            </div>
</ExportPrivateInfo.style__TextPrimary>,
          <ExportPrivateInfo.style__ParentDiv>
            <ExportPrivateInfo.style__StyledButton
                        id="exit"
                        onClick={[Function]}
                        type="primary"
            >
                        Close
            </ExportPrivateInfo.style__StyledButton>
</ExportPrivateInfo.style__ParentDiv>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Never share this information with anyone",
          },
          "ref": null,
          "rendered": "Never share this information with anyone",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Always keep a physical backup in a safe location",
          },
          "ref": null,
          "rendered": "Always keep a physical backup in a safe location",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <div>
                <ExportPrivateInfo.style__SecondaryHeader>
                                Mnemonic
                                <CopyToClipboard
                                                onCopy={undefined}
                                                options={undefined}
                                                text="over sentence spend best business museum ripple shop vault present travel fire"
                                >
                                                <ExportPrivateInfo.style__StyledIcon
                                                                icon="copy"
                                                                id="mnemonic"
                                                                onClick={[Function]}
                                                                size="small"
                                                                type="icon"
                                                />
                                </CopyToClipboard>
                </ExportPrivateInfo.style__SecondaryHeader>
                over sentence spend best business museum ripple shop vault present travel fire
</div>,
              <div>
                <ExportPrivateInfo.style__SecondaryHeader>
                                Private key
                                <CopyToClipboard
                                                onCopy={undefined}
                                                options={undefined}
                                                text="0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a"
                                >
                                                <ExportPrivateInfo.style__StyledIcon
                                                                icon="copy"
                                                                id="privateKey"
                                                                onClick={[Function]}
                                                                size="small"
                                                                type="icon"
                                                />
                                </CopyToClipboard>
                </ExportPrivateInfo.style__SecondaryHeader>
                0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a
</div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <ExportPrivateInfo.style__SecondaryHeader>
                    Mnemonic
                    <CopyToClipboard
                                        onCopy={undefined}
                                        options={undefined}
                                        text="over sentence spend best business museum ripple shop vault present travel fire"
                    >
                                        <ExportPrivateInfo.style__StyledIcon
                                                            icon="copy"
                                                            id="mnemonic"
                                                            onClick={[Function]}
                                                            size="small"
                                                            type="icon"
                                        />
                    </CopyToClipboard>
</ExportPrivateInfo.style__SecondaryHeader>,
                  "over sentence spend best business museum ripple shop vault present travel fire",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      "Mnemonic",
                      <CopyToClipboard
                        onCopy={undefined}
                        options={undefined}
                        text="over sentence spend best business museum ripple shop vault present travel fire"
>
                        <ExportPrivateInfo.style__StyledIcon
                                                icon="copy"
                                                id="mnemonic"
                                                onClick={[Function]}
                                                size="small"
                                                type="icon"
                        />
</CopyToClipboard>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Mnemonic",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <ExportPrivateInfo.style__StyledIcon
                          icon="copy"
                          id="mnemonic"
                          onClick={[Function]}
                          size="small"
                          type="icon"
/>,
                        "onCopy": undefined,
                        "options": undefined,
                        "text": "over sentence spend best business museum ripple shop vault present travel fire",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "icon": "copy",
                          "id": "mnemonic",
                          "onClick": [Function],
                          "size": "small",
                          "type": "icon",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
                "over sentence spend best business museum ripple shop vault present travel fire",
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <ExportPrivateInfo.style__SecondaryHeader>
                    Private key
                    <CopyToClipboard
                                        onCopy={undefined}
                                        options={undefined}
                                        text="0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a"
                    >
                                        <ExportPrivateInfo.style__StyledIcon
                                                            icon="copy"
                                                            id="privateKey"
                                                            onClick={[Function]}
                                                            size="small"
                                                            type="icon"
                                        />
                    </CopyToClipboard>
</ExportPrivateInfo.style__SecondaryHeader>,
                  "0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      "Private key",
                      <CopyToClipboard
                        onCopy={undefined}
                        options={undefined}
                        text="0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a"
>
                        <ExportPrivateInfo.style__StyledIcon
                                                icon="copy"
                                                id="privateKey"
                                                onClick={[Function]}
                                                size="small"
                                                type="icon"
                        />
</CopyToClipboard>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Private key",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <ExportPrivateInfo.style__StyledIcon
                          icon="copy"
                          id="privateKey"
                          onClick={[Function]}
                          size="small"
                          type="icon"
/>,
                        "onCopy": undefined,
                        "options": undefined,
                        "text": "0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "icon": "copy",
                          "id": "privateKey",
                          "onClick": [Function],
                          "size": "small",
                          "type": "icon",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
                "0x566157c389ca0afe0237387cc352b6910594548bd77631a19e9ccc588c969a2a",
              ],
              "type": "div",
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <ExportPrivateInfo.style__StyledButton
              id="exit"
              onClick={[Function]}
              type="primary"
>
              Close
</ExportPrivateInfo.style__StyledButton>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Close",
              "id": "exit",
              "onClick": [Function],
              "type": "primary",
            },
            "ref": null,
            "rendered": "Close",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`<ExportPrivateInfo/> should render <ExportPrivateInfo/> correctly and when there is not a mnemonic 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ExportPrivateInfo
    mnemonic={undefined}
    onExit={[Function]}
    privateKey="0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "children": Array [
        <ExportPrivateInfo.style__Text>
          Never share this information with anyone
</ExportPrivateInfo.style__Text>,
        <ExportPrivateInfo.style__Text>
          Always keep a physical backup in a safe location
</ExportPrivateInfo.style__Text>,
        <ExportPrivateInfo.style__TextPrimary>
          <div>
                    <ExportPrivateInfo.style__PrimaryHeader>
                              Mnemonic
                    </ExportPrivateInfo.style__PrimaryHeader>
                    This wallet was imported using a private key therefore does not have a mnemonic to export
          </div>
          <div>
                    <ExportPrivateInfo.style__SecondaryHeader>
                              Private key
                              <CopyToClipboard
                                        onCopy={undefined}
                                        options={undefined}
                                        text="0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828"
                              >
                                        <ExportPrivateInfo.style__StyledIcon
                                                  icon="copy"
                                                  id="privateKey"
                                                  onClick={[Function]}
                                                  size="small"
                                                  type="icon"
                                        />
                              </CopyToClipboard>
                    </ExportPrivateInfo.style__SecondaryHeader>
                    0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828
          </div>
</ExportPrivateInfo.style__TextPrimary>,
        <ExportPrivateInfo.style__ParentDiv>
          <ExportPrivateInfo.style__StyledButton
                    id="exit"
                    onClick={[Function]}
                    type="primary"
          >
                    Close
          </ExportPrivateInfo.style__StyledButton>
</ExportPrivateInfo.style__ParentDiv>,
      ],
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Never share this information with anyone",
        },
        "ref": null,
        "rendered": "Never share this information with anyone",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "Always keep a physical backup in a safe location",
        },
        "ref": null,
        "rendered": "Always keep a physical backup in a safe location",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <div>
              <ExportPrivateInfo.style__PrimaryHeader>
                            Mnemonic
              </ExportPrivateInfo.style__PrimaryHeader>
              This wallet was imported using a private key therefore does not have a mnemonic to export
</div>,
            <div>
              <ExportPrivateInfo.style__SecondaryHeader>
                            Private key
                            <CopyToClipboard
                                          onCopy={undefined}
                                          options={undefined}
                                          text="0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828"
                            >
                                          <ExportPrivateInfo.style__StyledIcon
                                                        icon="copy"
                                                        id="privateKey"
                                                        onClick={[Function]}
                                                        size="small"
                                                        type="icon"
                                          />
                            </CopyToClipboard>
              </ExportPrivateInfo.style__SecondaryHeader>
              0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828
</div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <ExportPrivateInfo.style__PrimaryHeader>
                  Mnemonic
</ExportPrivateInfo.style__PrimaryHeader>,
                "This wallet was imported using a private key therefore does not have a mnemonic to export",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": "Mnemonic",
                },
                "ref": null,
                "rendered": "Mnemonic",
                "type": [Function],
              },
              "This wallet was imported using a private key therefore does not have a mnemonic to export",
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <ExportPrivateInfo.style__SecondaryHeader>
                  Private key
                  <CopyToClipboard
                                    onCopy={undefined}
                                    options={undefined}
                                    text="0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828"
                  >
                                    <ExportPrivateInfo.style__StyledIcon
                                                      icon="copy"
                                                      id="privateKey"
                                                      onClick={[Function]}
                                                      size="small"
                                                      type="icon"
                                    />
                  </CopyToClipboard>
</ExportPrivateInfo.style__SecondaryHeader>,
                "0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828",
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "children": Array [
                    "Private key",
                    <CopyToClipboard
                      onCopy={undefined}
                      options={undefined}
                      text="0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828"
>
                      <ExportPrivateInfo.style__StyledIcon
                                            icon="copy"
                                            id="privateKey"
                                            onClick={[Function]}
                                            size="small"
                                            type="icon"
                      />
</CopyToClipboard>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Private key",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "class",
                    "props": Object {
                      "children": <ExportPrivateInfo.style__StyledIcon
                        icon="copy"
                        id="privateKey"
                        onClick={[Function]}
                        size="small"
                        type="icon"
/>,
                      "onCopy": undefined,
                      "options": undefined,
                      "text": "0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828",
                    },
                    "ref": null,
                    "rendered": Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "icon": "copy",
                        "id": "privateKey",
                        "onClick": [Function],
                        "size": "small",
                        "type": "icon",
                      },
                      "ref": null,
                      "rendered": null,
                      "type": [Function],
                    },
                    "type": [Function],
                  },
                ],
                "type": [Function],
              },
              "0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828",
            ],
            "type": "div",
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <ExportPrivateInfo.style__StyledButton
            id="exit"
            onClick={[Function]}
            type="primary"
>
            Close
</ExportPrivateInfo.style__StyledButton>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Close",
            "id": "exit",
            "onClick": [Function],
            "type": "primary",
          },
          "ref": null,
          "rendered": "Close",
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <ExportPrivateInfo.style__Text>
            Never share this information with anyone
</ExportPrivateInfo.style__Text>,
          <ExportPrivateInfo.style__Text>
            Always keep a physical backup in a safe location
</ExportPrivateInfo.style__Text>,
          <ExportPrivateInfo.style__TextPrimary>
            <div>
                        <ExportPrivateInfo.style__PrimaryHeader>
                                    Mnemonic
                        </ExportPrivateInfo.style__PrimaryHeader>
                        This wallet was imported using a private key therefore does not have a mnemonic to export
            </div>
            <div>
                        <ExportPrivateInfo.style__SecondaryHeader>
                                    Private key
                                    <CopyToClipboard
                                                onCopy={undefined}
                                                options={undefined}
                                                text="0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828"
                                    >
                                                <ExportPrivateInfo.style__StyledIcon
                                                            icon="copy"
                                                            id="privateKey"
                                                            onClick={[Function]}
                                                            size="small"
                                                            type="icon"
                                                />
                                    </CopyToClipboard>
                        </ExportPrivateInfo.style__SecondaryHeader>
                        0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828
            </div>
</ExportPrivateInfo.style__TextPrimary>,
          <ExportPrivateInfo.style__ParentDiv>
            <ExportPrivateInfo.style__StyledButton
                        id="exit"
                        onClick={[Function]}
                        type="primary"
            >
                        Close
            </ExportPrivateInfo.style__StyledButton>
</ExportPrivateInfo.style__ParentDiv>,
        ],
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Never share this information with anyone",
          },
          "ref": null,
          "rendered": "Never share this information with anyone",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Always keep a physical backup in a safe location",
          },
          "ref": null,
          "rendered": "Always keep a physical backup in a safe location",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <div>
                <ExportPrivateInfo.style__PrimaryHeader>
                                Mnemonic
                </ExportPrivateInfo.style__PrimaryHeader>
                This wallet was imported using a private key therefore does not have a mnemonic to export
</div>,
              <div>
                <ExportPrivateInfo.style__SecondaryHeader>
                                Private key
                                <CopyToClipboard
                                                onCopy={undefined}
                                                options={undefined}
                                                text="0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828"
                                >
                                                <ExportPrivateInfo.style__StyledIcon
                                                                icon="copy"
                                                                id="privateKey"
                                                                onClick={[Function]}
                                                                size="small"
                                                                type="icon"
                                                />
                                </CopyToClipboard>
                </ExportPrivateInfo.style__SecondaryHeader>
                0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828
</div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <ExportPrivateInfo.style__PrimaryHeader>
                    Mnemonic
</ExportPrivateInfo.style__PrimaryHeader>,
                  "This wallet was imported using a private key therefore does not have a mnemonic to export",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": "Mnemonic",
                  },
                  "ref": null,
                  "rendered": "Mnemonic",
                  "type": [Function],
                },
                "This wallet was imported using a private key therefore does not have a mnemonic to export",
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <ExportPrivateInfo.style__SecondaryHeader>
                    Private key
                    <CopyToClipboard
                                        onCopy={undefined}
                                        options={undefined}
                                        text="0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828"
                    >
                                        <ExportPrivateInfo.style__StyledIcon
                                                            icon="copy"
                                                            id="privateKey"
                                                            onClick={[Function]}
                                                            size="small"
                                                            type="icon"
                                        />
                    </CopyToClipboard>
</ExportPrivateInfo.style__SecondaryHeader>,
                  "0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828",
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "children": Array [
                      "Private key",
                      <CopyToClipboard
                        onCopy={undefined}
                        options={undefined}
                        text="0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828"
>
                        <ExportPrivateInfo.style__StyledIcon
                                                icon="copy"
                                                id="privateKey"
                                                onClick={[Function]}
                                                size="small"
                                                type="icon"
                        />
</CopyToClipboard>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    "Private key",
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "class",
                      "props": Object {
                        "children": <ExportPrivateInfo.style__StyledIcon
                          icon="copy"
                          id="privateKey"
                          onClick={[Function]}
                          size="small"
                          type="icon"
/>,
                        "onCopy": undefined,
                        "options": undefined,
                        "text": "0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828",
                      },
                      "ref": null,
                      "rendered": Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "class",
                        "props": Object {
                          "icon": "copy",
                          "id": "privateKey",
                          "onClick": [Function],
                          "size": "small",
                          "type": "icon",
                        },
                        "ref": null,
                        "rendered": null,
                        "type": [Function],
                      },
                      "type": [Function],
                    },
                  ],
                  "type": [Function],
                },
                "0xc6ea866d2f5468e0caf0e96e1491c257f501a30ce695e2d8b876946995699828",
              ],
              "type": "div",
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <ExportPrivateInfo.style__StyledButton
              id="exit"
              onClick={[Function]}
              type="primary"
>
              Close
</ExportPrivateInfo.style__StyledButton>,
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Close",
              "id": "exit",
              "onClick": [Function],
              "type": "primary",
            },
            "ref": null,
            "rendered": "Close",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
